--- a/src/pages/gallery/index/index.scss
+++ b/src/pages/gallery/index/index.scss
@@ -1,9 +1,12 @@
 @import '../../../assets/styles/public.scss';
 
+.imglist {
+    margin: 1rem 1rem 1rem 1rem;
+    flex: 1;
+}
 /*图片列表*/
 .component-img-list {
     font-size: 0;
-    padding: 1rem;
     font-weight: 300;
     .component-img-item {
         padding: 1rem;
@@ -12,9 +15,9 @@
         box-sizing: border-box;
         .component-img-cover {
             max-width: 100%;
-            box-shadow: 0 10px 15px #ddd;
             margin-bottom: 1rem;
             border-radius: .3rem;
+            box-shadow: 0 10px 15px #eeeef8;
         }
         .component-img-text {
             font-size: .9rem;
@@ -53,8 +56,6 @@
         }
     }
     .body {
-        padding: 2rem;
-        @extend .section;
         margin-bottom: 3rem;
         img {
             max-width: 100%;
