--- a/src/pages/user/login/index.scss
+++ b/src/pages/user/login/index.scss
@@ -1,12 +1,23 @@
 @import '../../../assets/styles/public.scss';
-.page-login {
-    background-color: #8b90f9;
+.page-login-box {
     width: 100%;
     height: 100vh;
-    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+    z-index: 1;
+}
+.page-login {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background-color: #8b90f9;
+}
+
+#pageBackground {
+    position: fixed;
+    z-index: 0;
 }
 
 .useropt {
@@ -21,15 +32,32 @@
     .des {
         color: #bfc2fa;
         font-size: 1.3rem;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
     }
     .form-useropt {
+        .icon-input {
+            position: relative;
+            svg {
+                position: absolute;
+                left: 1rem;
+                top: 1rem;
+                color: #ddd;
+            }
+            .tip {
+                position: absolute;
+                left: 2.8rem;
+                top: 1rem;
+                color: #aaa;
+                pointer-events: none;
+                @extend .transition;
+            }
+        }
         input {
             font-weight: 300;
             display: block;
             margin-bottom: 1rem;
             font-size: 1rem;
-            padding: .8rem 1rem;
+            padding: .8rem 1rem .8rem 2.8rem;
             width:16rem;
             border: none;
             border-radius: .2rem;
@@ -51,17 +79,19 @@
         .form-btn {
             display: block;
             border: .1rem solid #FFF;
-            color: #FFF;
-            background: none;
+            background: #FFF;
+            color: #8b90f9;
             font-size: 1rem;
             padding: .6rem 2rem;
             border-radius: 2rem;
             margin: 2rem auto 1rem;
             width: 8rem;
             cursor: pointer;
+            opacity: 1;
             @extend .transition;
-            &:hover {
-                background-color: #FFF;
+            &:disabled {
+                cursor: not-allowed;
+                opacity: .5;
             }
         }
         .form-subtext {
