--- a/src/layouts/sidebar/sidebar.scss
+++ b/src/layouts/sidebar/sidebar.scss
@@ -154,6 +154,9 @@ $borderColor: #e9e9f4;
             display: block;
             margin: 0 auto 0.3rem;
         }
+        &.active {
+            color: #474747;
+        }
         &:hover {
             color: #474747;
             background-color: #e9e9f8;
