添加部分接口

--- a/src/components/dropdown/index.scss
+++ b/src/components/dropdown/index.scss
@@ -37,6 +37,10 @@ $mainColor: #632df8;
                     background-color: #f5faff;
                 }
             }
+            img {
+                width: 1.5rem;
+                height: 1.5rem;
+            }
         }
     }
 }
