--- a/src/layouts/sidebar/sidebar.scss
+++ b/src/layouts/sidebar/sidebar.scss
@@ -122,6 +122,9 @@ $borderColor: #e9e9f4;
                 margin: 1rem auto;
                 padding: .6rem 2rem;
             }
+            button {
+                margin-top: 1rem;
+            }
             svg {
                 margin-right: .5rem;
             }
