文章部分修补

--- a/src/assets/styles/normal.scss
+++ b/src/assets/styles/normal.scss
@@ -1,8 +1,9 @@
 body {
     background-color: #f5f5fc;
     font-weight: 300;
-    min-height: 100vh;
+    min-height: 28rem;
     min-width: 1300px;
+    overflow: hidden;
 }
 
 body,
