--- a/src/pages/user/login/index.scss
+++ b/src/pages/user/login/index.scss
@@ -2,6 +2,7 @@
 .page-login-box {
     width: 100%;
     height: 100vh;
+    min-height: 28rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,6 +12,7 @@
 .page-login {
     width: 100%;
     height: 100vh;
+    min-height: 28rem;
     overflow: hidden;
     background-color: #8b90f9;
 }
