修改信息页面

--- a/src/assets/styles/public.scss
+++ b/src/assets/styles/public.scss
@@ -65,7 +65,7 @@ $fontBlack: #3e4077;
     &::-webkit-scrollbar {
         width: 5px;
         height: 5px;
-        background: #f8f9ff;
+        background: #f5f5fc;
         @extend .transition;
     }
     
