--- a/src/pages/setting/account/index.scss
+++ b/src/pages/setting/account/index.scss
@@ -45,13 +45,16 @@
        }
        .input-file-box {
            position: relative;
+           width: 9rem;
            .file-input {
-               width: 1rem;
-               height: 1rem;
-               visibility: hidden;
+               width: 100%;
+               opacity: 0;
                position: absolute;
-               z-index: -1;
-
+               cursor: pointer;
+               z-index: 1;
+           }
+           .file-btn {
+               width: 100%;
            }
        }
 
