--- a/src/pages/gallery/edit/index.scss
+++ b/src/pages/gallery/edit/index.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/styles/public.scss';
 .edit-chart-page {
-    flex: 1;
-    margin: 1rem 2rem;
+    width: 1360px;
+    margin: 2rem 2rem;
     font-weight: 300;
     @extend .section;
 }
@@ -20,36 +20,36 @@
 
 }
 
-.chart-edit-tools {
-    width: 100%;
-    padding: 0 1rem;
+
+.ul-chart-tools {
     display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
+    padding: .3rem 1rem;
     background-color: #f7f7fb;
     border-top: 1px solid #eef0f3;
     border-bottom: 1px solid #eef0f3;
-    .ul-chart-tools {
-        display: flex;
-        padding: .3rem 0;
-        li {
-            display: block;
-            color: #7f83b8;
-            font-size: .9rem;
-            padding: .8rem;
-            margin: 0 .2rem;
-            border-radius: .3rem;
-            cursor: pointer;
-            @extend .transition;
-            &:hover {
-                svg {
-                    color:#474747; 
-                }
-                background: #e9e9f8;
+    .command {
+        display: block;
+        color: #7f83b8;
+        font-size: .9rem;
+        padding: .8rem;
+        margin: 0 .2rem;
+        border-radius: .3rem;
+        cursor: pointer;
+        @extend .transition;
+        &:hover {
+            svg {
+                color:#474747; 
             }
+            background: #e9e9f8;
         }
-    }    
-}
+    }
+    .divide {
+        width: 1px;
+        height: 100%;
+        background-color: #E8E8E8;
+    }
+}    
+
 
 
 .chart-edit-shapes {
@@ -86,28 +86,11 @@
 }
 
 .chart-edit-canvas {
-    overflow: scroll;
-    background-color: #D8D8D8;
     flex: 1;
     .edit-canvas {
         position: relative;
-        margin: 32px;
-        padding: 16px;
-        width: 1020px;
-        height: 600px;
-        box-shadow: 0 10px 15px #eee;
         canvas {
             background: #fff;
-            border: 1px solid #E8E8E8;
         }
-        background-color: #f4f4f4;
-        box-shadow: 0 10px 15px #ddd;
-    }
-    #text-tool {
-        position: absolute;
-        background: #FFF;
-        font-size: 12px;
-        font-weight: normal;
-        padding: .2rem .5rem;
     }
 }
