--- a/src/pages/group/index/index.scss
+++ b/src/pages/group/index/index.scss
@@ -158,6 +158,7 @@
 
 
 .add-mem {
+    font-weight: 300;
     padding: 1rem 3rem;
     .input {
         display: block;
@@ -168,10 +169,14 @@
     .btns {
         text-align: center;
     }
+    .tip {
+        font-size: .9rem;
+        margin-bottom: .8rem;
+    }
     .ul-add-mem {
         border-right: 1px solid #e9e9f4;
         border-left: 1px solid #e9e9f4;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
         li {
             display: flex;
             align-items: center;
@@ -179,14 +184,49 @@
             border-bottom:  1px solid #e9e9f4;
             padding: .4rem;
             font-size: .9rem;
+            cursor: pointer;
             img {
                 width: 2rem;
                 height: 2rem;
                 border-radius: 50%;
                 margin-right: 1rem;
             }
+            @extend .transition;
+            &:hover {
+                background-color: #f8f8ff;
+            }
         }
-    }    
+    }  
+    .select-list {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 1rem;
+        li {
+            display: flex;
+            margin-right: 1rem;
+            background-color: #f1f1ff;
+            color: #474747;
+            padding: .4rem .6rem;
+            border-radius: .3rem;
+            align-items: center;
+            img {
+                width: 1.2rem;
+                height: 1.2rem;
+                border-radius: 50%;
+                margin-right: .5rem;
+                vertical-align: middle;
+            }
+            p {
+                margin-right: 1rem;
+                font-size: .85rem;
+            }
+            span {
+                cursor: pointer;
+                color: #b1b4db;
+                font-size: .8rem;
+            }
+        }
+    }
 }
 
 .flex-align {
@@ -303,6 +343,7 @@
         font-size: .9rem;
         cursor: pointer;
         margin: .4rem 1rem 0 0;
+        color: #888;
     }
 }
 
