--- a/src/pages/group/index/index.scss
+++ b/src/pages/group/index/index.scss
@@ -354,7 +354,7 @@
     font-size: .9rem;
     font-weight: 300;
     color: #3e4077;
-    border: solid 1px #a3a5b6;
+    border: 1px solid #eef0f3;
     option::-ms-expand{ display: none; }
     option{
         -moz-appearance:none; /* Firefox */
