--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -198,7 +198,7 @@
             align-items: center;
             color: #3e4077;
             a {
-                color: #4c71f9;
+                color: #8f8ffa;
             }
         }
         .icon {
