--- a/src/components/dropdown/index.scss
+++ b/src/components/dropdown/index.scss
@@ -13,6 +13,7 @@ $mainColor: #632df8;
     .mck-dropdown-box {
         display: none;
         position: absolute;
+        z-index: 400;
         bottom: 0;
         left: 0;
         transform: translateY(100%);
