--- a/src/pages/gallery/index/index.scss
+++ b/src/pages/gallery/index/index.scss
@@ -59,6 +59,7 @@
             margin-bottom: 1rem;
             border-radius: .3rem;
             box-shadow: 0 10px 15px #eeeef8;
+            background: #fff;
         }
         .component-img-text {
             font-size: .9rem;
