--- a/src/components/modal/index.scss
+++ b/src/components/modal/index.scss
@@ -1,6 +1,7 @@
 $dotColor: #ff6a6a;
 .mck-modal {
     position: fixed;
+    font-weight: 300;
     width: 100%;
     height: 100%;
     background-color: rgba(245,245,252, .8);
