--- a/src/components/tabs/index.scss
+++ b/src/components/tabs/index.scss
@@ -14,6 +14,7 @@
             border: 1px solid transparent;
             cursor: pointer;
             margin-right: .3rem;
+            font-size: .9rem;
             &.active {
                 border-color: #ddd;
                 border-bottom-color: transparent; 
